Carousel text still needs contrast from the background, probably easier to put text in images themselves (avoids the need for @media-specific CSS for scaling issues on mobile)

--- a/css/base.css
+++ b/css/base.css
@@ -61,7 +61,10 @@ h1, h2, h3, h4 h5, h6 {
 }
 
 #sip-carousel h3, #sip-carousel p {
-  text-shadow: 0px 0px 1px rgba(0,0,0,1);
+  text-shadow: 1px 1px 3px rgba(0,0,0,.5),
+              -1px 1px 3px rgba(0,0,0,.5),
+               1px -1px 3px rgba(0,0,0,.5),
+              -1px -1px 3px rgba(0,0,0,.5);
 }
 
 .main {
@@ -71,6 +74,7 @@ h1, h2, h3, h4 h5, h6 {
   height: 400px;
   margin-top: 120px;
 }
+
 
 #sip-menu h1, #sip-menu h2 {
   /*margin-left: 20px;*/
